tests/baselines/reference/parserCommaInTypeMemberList1.errors.txt
==== tests/cases/compiler/parserCommaInTypeMemberList1.ts (1 errors) ====
    var v: { workItem: any, width: string };
                          ~
!!! parserCommaInTypeMemberList1.ts(1,23): error TS1005: ';' expected.